# Minesweeper

./: .gitignore  CMakeLists.txt  README.md
include/: fisher_yates.h  minesweeper.h
src/: fisher_yates.c  main.c  minesweeper.c
